--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             type="submit"
             class="bg-green-600 hover:bg-green-700 text-white px-5 py-[10.7px] sm:px-6 sm:py-[12px] font-medium transition-colors duration-300"
           >
-            Cari
+            <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </form>
       </div>
