--- a/ticket/check-ticket/index.html
+++ b/ticket/check-ticket/index.html
@@ -22,26 +22,34 @@
     <!-- Header -->
     <header
       id="main-header"
-      class="w-full sticky top-0 z-50 bg-white transition-shadow duration-300"
+      class="w-full sticky top-0 z-50 bg-white shadow-sm transition-shadow duration-300"
     >
       <nav class="w-full bg-white px-4 py-3 flex justify-between items-center">
-        <div class="w-[180px]">
+        <!-- Logo -->
+        <div class="flex-shrink-0">
           <a href="#">
-            <img src="/img/logo.png" alt="Logo" />
+            <img src="/img/logo.png" alt="Logo" class="h-10 w-auto" />
           </a>
         </div>
 
+        <!-- Navigation (Desktop & Tablet) -->
         <div
-          class="w-[70%] text-center font-semibold flex justify-center gap-8"
+          class="hidden md:flex flex-1 justify-center items-center gap-8 font-semibold"
         >
-          <a href="/" class="relative group pb-1">
+          <a
+            href="/"
+            class="relative group pb-1 hover:text-green-600 transition"
+          >
             Beranda
             <span
               class="absolute left-0 bottom-0 w-0 h-[2px] bg-green-400 transition-all duration-300 group-hover:w-full"
             ></span>
           </a>
 
-          <a href="/#faq" class="relative group pb-1">
+          <a
+            href="/#faq"
+            class="relative group pb-1 hover:text-green-600 transition"
+          >
             FAQ
             <span
               class="absolute left-0 bottom-0 w-0 h-[2px] bg-green-400 transition-all duration-300 group-hover:w-full"
@@ -49,7 +57,8 @@
           </a>
         </div>
 
-        <div class="w-[180px] text-right">
+        <!-- Login Button (Desktop & Tablet) -->
+        <div class="hidden md:block">
           <button
             onclick="window.location.href='/login'"
             class="cursor-pointer border px-6 py-[6px] rounded border-green-600 text-green-600 font-semibold hover:bg-green-600 hover:text-white transition"
@@ -57,19 +66,84 @@
             Login
           </button>
         </div>
+
+        <!-- Hamburger Button (Mobile only) -->
+        <button
+          id="menu-toggle"
+          class="md:hidden flex items-center text-green-600 focus:outline-none"
+          aria-label="Toggle menu"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-7 w-7"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
       </nav>
+
+      <!-- Menu (Mobile only) -->
+      <div
+        id="nav-links"
+        class="hidden md:hidden flex-col absolute top-[64px] left-0 w-full bg-white shadow-md border-t border-gray-100 font-semibold text-center"
+      >
+        <a
+          href="/"
+          class="block py-3 border-b border-gray-100 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          Beranda
+        </a>
+
+        <a
+          href="/#faq"
+          class="block py-3 border-b border-gray-100 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          FAQ
+        </a>
+
+        <a
+          href="/login"
+          class="block py-3 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          Login
+        </a>
+      </div>
     </header>
+    <!-- JS toggle -->
+    <script>
+      const btn = document.getElementById("menu-toggle");
+      const nav = document.getElementById("nav-links");
+      btn.addEventListener("click", () => {
+        nav.classList.toggle("hidden");
+      });
+    </script>
 
     <!-- Send Ticket -->
-    <section class="py-16 bg-white min-h-[calc(100vh-100px)]">
+    <section
+      class="py-16 bg-white min-h-[calc(100vh-100px)] flex items-center justify-center"
+    >
       <!-- Ticket -->
-      <div class="w-[50%] mx-auto border p-4">
-        <span class="text-[0.7rem] text-gray-500">
-          <a href="/ticket">Tiket</a>
-          <i class="fa-solid fa-arrow-right"></i> Check Tiket
+      <div
+        class="w-full sm:w-[80%] md:w-[60%] lg:w-[50%] mx-auto border border-gray-200 rounded-2xl shadow-sm p-6 md:p-10"
+      >
+        <span class="text-xs text-gray-500 block mb-4">
+          <a href="/ticket" class="hover:text-green-600 transition-colors"
+            >Tiket</a
+          >
+          <i class="fa-solid fa-arrow-right mx-1"></i>
+          Check Tiket
         </span>
+
         <!-- Form -->
-        <form class="rounded-2xl p-8 w-full space-y-6" action="">
+        <form class="rounded-2xl w-full space-y-6" action="">
           <h1 class="text-2xl font-semibold text-gray-800 text-center">
             Lihat tiket yang sudah ada
           </h1>
@@ -83,9 +157,9 @@
             >
             <input
               type="text"
-              name="username"
-              id="username"
-              placeholder="Masukkan nama Anda"
+              id="idTiket"
+              name="idTiket"
+              placeholder="Masukkan ID Tiket Anda"
               class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-green-400 focus:outline-none"
             />
           </div>
@@ -99,15 +173,15 @@
             >
             <input
               type="email"
-              name="email"
               id="email"
+              name="email"
               placeholder="nama@email.com"
               class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-green-400 focus:outline-none"
             />
           </div>
 
           <!-- Tombol -->
-          <a href="/ticket/check-ticket/detail">
+          <a href="/ticket/check-ticket/detail" class="block">
             <button
               type="button"
               class="w-full mt-6 bg-green-600 hover:bg-green-700 text-white font-medium py-2.5 rounded-md transition-colors duration-200"
