--- a/ticket/index.html
+++ b/ticket/index.html
@@ -22,26 +22,34 @@
     <!-- Header -->
     <header
       id="main-header"
-      class="w-full sticky top-0 z-50 bg-white transition-shadow duration-300"
+      class="w-full sticky top-0 z-50 bg-white shadow-sm transition-shadow duration-300"
     >
       <nav class="w-full bg-white px-4 py-3 flex justify-between items-center">
-        <div class="w-[180px]">
+        <!-- Logo -->
+        <div class="flex-shrink-0">
           <a href="#">
-            <img src="/img/logo.png" alt="Logo" />
+            <img src="/img/logo.png" alt="Logo" class="h-10 w-auto" />
           </a>
         </div>
 
+        <!-- Navigation (Desktop & Tablet) -->
         <div
-          class="w-[70%] text-center font-semibold flex justify-center gap-8"
+          class="hidden md:flex flex-1 justify-center items-center gap-8 font-semibold"
         >
-          <a href="/" class="relative group pb-1">
+          <a
+            href="/"
+            class="relative group pb-1 hover:text-green-600 transition"
+          >
             Beranda
             <span
               class="absolute left-0 bottom-0 w-0 h-[2px] bg-green-400 transition-all duration-300 group-hover:w-full"
             ></span>
           </a>
 
-          <a href="/#faq" class="relative group pb-1">
+          <a
+            href="/#faq"
+            class="relative group pb-1 hover:text-green-600 transition"
+          >
             FAQ
             <span
               class="absolute left-0 bottom-0 w-0 h-[2px] bg-green-400 transition-all duration-300 group-hover:w-full"
@@ -49,7 +57,8 @@
           </a>
         </div>
 
-        <div class="w-[180px] text-right">
+        <!-- Login Button (Desktop & Tablet) -->
+        <div class="hidden md:block">
           <button
             onclick="window.location.href='/login'"
             class="cursor-pointer border px-6 py-[6px] rounded border-green-600 text-green-600 font-semibold hover:bg-green-600 hover:text-white transition"
@@ -57,13 +66,70 @@
             Login
           </button>
         </div>
+
+        <!-- Hamburger Button (Mobile only) -->
+        <button
+          id="menu-toggle"
+          class="md:hidden flex items-center text-green-600 focus:outline-none"
+          aria-label="Toggle menu"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-7 w-7"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
       </nav>
+
+      <!-- Menu (Mobile only) -->
+      <div
+        id="nav-links"
+        class="hidden md:hidden flex-col absolute top-[64px] left-0 w-full bg-white shadow-md border-t border-gray-100 font-semibold text-center"
+      >
+        <a
+          href="/"
+          class="block py-3 border-b border-gray-100 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          Beranda
+        </a>
+
+        <a
+          href="/#faq"
+          class="block py-3 border-b border-gray-100 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          FAQ
+        </a>
+
+        <a
+          href="/login"
+          class="block py-3 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          Login
+        </a>
+      </div>
     </header>
+    <!-- JS toggle -->
+    <script>
+      const btn = document.getElementById("menu-toggle");
+      const nav = document.getElementById("nav-links");
+      btn.addEventListener("click", () => {
+        nav.classList.toggle("hidden");
+      });
+    </script>
 
     <!-- Ticket -->
     <section class="py-16 bg-white min-h-[calc(100vh-100px)]">
       <!-- Title -->
-      <div class="mb-12 px-4 w-full text-center mb-[100px]">
+      <div class="mb-12 px-4 w-full text-center">
         <h2 class="text-3xl md:text-3xl font-bold text-gray-900">
           Kirimkan Permohonan Dukungan
         </h2>
@@ -72,80 +138,109 @@
           Bertanggung Jawab
         </p>
       </div>
-      <!-- Ticket -->
-      <div class="w-[60%] mx-auto">
+
+      <!-- Ticket Container -->
+      <div class="w-full md:w-[80%] lg:w-[60%] mx-auto px-4">
         <!-- Box -->
-        <div class="flex justify-between flex-wrap">
+        <div class="flex flex-col gap-4 mb-8">
           <a
             href="/ticket/check-ticket/"
-            class="relative group border border-green-300 border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-full text-center mb-4 transition-all duration-300 ease-in-out"
+            class="relative group border border-green-300 border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg text-center transition-all duration-300 ease-in-out overflow-hidden"
           >
             <span class="relative z-10 group-hover:text-gray-700">
               Lihat tiket yang sudah ada? Tampilkan tiket yang pernah Anda
               kirimkan sebelumnya
             </span>
             <span
-              class="absolute bg-green-300 rounded left-0 top-0 h-[100%] w-0 group-hover:w-full transition-all duration-300 ease-in-out"
+              class="absolute bg-green-300 rounded left-0 top-0 h-full w-0 group-hover:w-full transition-all duration-300 ease-in-out"
             ></span>
           </a>
+        </div>
+
+        <!-- Grid of Categories -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
           <a
             href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >Pelayanan Akademik <i class="fa-solid fa-arrow-right"></i>
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            Pelayanan Akademik <i class="fa-solid fa-arrow-right"></i>
           </a>
+
           <a
             href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >Pelayanan Keuangan
-            <i class="fa-solid fa-arrow-right"></i>
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            Pelayanan Keuangan <i class="fa-solid fa-arrow-right"></i>
           </a>
+
           <a
             href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >Kemahasiswaan
-            <i class="fa-solid fa-arrow-right"></i>
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            Kemahasiswaan <i class="fa-solid fa-arrow-right"></i>
           </a>
+
           <a
             href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >Sarana & Prasarana <i class="fa-solid fa-arrow-right"></i> </a
-          ><a
-            href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >SIKADU <i class="fa-solid fa-arrow-right"></i> </a
-          ><a
-            href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >SIKAWAN
-            <i class="fa-solid fa-arrow-right"></i>
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            Sarana & Prasarana <i class="fa-solid fa-arrow-right"></i>
           </a>
+
           <a
             href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >Pelayanan Wisuda <i class="fa-solid fa-arrow-right"></i> </a
-          ><a
-            href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >TOEFL/TOAFL <i class="fa-solid fa-arrow-right"></i> </a
-          ><a
-            href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >Sistem Informasi
-            <i class="fa-solid fa-arrow-right"></i>
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            SIKADU <i class="fa-solid fa-arrow-right"></i>
           </a>
+
           <a
             href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >Perpustakaan <i class="fa-solid fa-arrow-right"></i> </a
-          ><a
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            SIKAWAN <i class="fa-solid fa-arrow-right"></i>
+          </a>
+
+          <a
             href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >Pusat Karir <i class="fa-solid fa-arrow-right"></i> </a
-          ><a
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            Pelayanan Wisuda <i class="fa-solid fa-arrow-right"></i>
+          </a>
+
+          <a
             href="/ticket/send-ticket"
-            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
-            >Jaringan/WiFi
-            <i class="fa-solid fa-arrow-right"></i>
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            TOEFL/TOAFL <i class="fa-solid fa-arrow-right"></i>
+          </a>
+
+          <a
+            href="/ticket/send-ticket"
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            Sistem Informasi <i class="fa-solid fa-arrow-right"></i>
+          </a>
+
+          <a
+            href="/ticket/send-ticket"
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            Perpustakaan <i class="fa-solid fa-arrow-right"></i>
+          </a>
+
+          <a
+            href="/ticket/send-ticket"
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            Pusat Karir <i class="fa-solid fa-arrow-right"></i>
+          </a>
+
+          <a
+            href="/ticket/send-ticket"
+            class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-4 py-4 rounded-lg flex items-center justify-between hover:bg-green-300 transition-all duration-300 ease-in-out"
+          >
+            Jaringan/WiFi <i class="fa-solid fa-arrow-right"></i>
           </a>
         </div>
       </div>
