--- a/ticket/send-ticket/index.html
+++ b/ticket/send-ticket/index.html
@@ -22,26 +22,34 @@
     <!-- Header -->
     <header
       id="main-header"
-      class="w-full sticky top-0 z-50 bg-white transition-shadow duration-300"
+      class="w-full sticky top-0 z-50 bg-white shadow-sm transition-shadow duration-300"
     >
       <nav class="w-full bg-white px-4 py-3 flex justify-between items-center">
-        <div class="w-[180px]">
+        <!-- Logo -->
+        <div class="flex-shrink-0">
           <a href="#">
-            <img src="/img/logo.png" alt="Logo" />
+            <img src="/img/logo.png" alt="Logo" class="h-10 w-auto" />
           </a>
         </div>
 
+        <!-- Navigation (Desktop & Tablet) -->
         <div
-          class="w-[70%] text-center font-semibold flex justify-center gap-8"
+          class="hidden md:flex flex-1 justify-center items-center gap-8 font-semibold"
         >
-          <a href="/" class="relative group pb-1">
+          <a
+            href="/"
+            class="relative group pb-1 hover:text-green-600 transition"
+          >
             Beranda
             <span
               class="absolute left-0 bottom-0 w-0 h-[2px] bg-green-400 transition-all duration-300 group-hover:w-full"
             ></span>
           </a>
 
-          <a href="/#faq" class="relative group pb-1">
+          <a
+            href="/#faq"
+            class="relative group pb-1 hover:text-green-600 transition"
+          >
             FAQ
             <span
               class="absolute left-0 bottom-0 w-0 h-[2px] bg-green-400 transition-all duration-300 group-hover:w-full"
@@ -49,7 +57,8 @@
           </a>
         </div>
 
-        <div class="w-[180px] text-right">
+        <!-- Login Button (Desktop & Tablet) -->
+        <div class="hidden md:block">
           <button
             onclick="window.location.href='/login'"
             class="cursor-pointer border px-6 py-[6px] rounded border-green-600 text-green-600 font-semibold hover:bg-green-600 hover:text-white transition"
@@ -57,19 +66,83 @@
             Login
           </button>
         </div>
+
+        <!-- Hamburger Button (Mobile only) -->
+        <button
+          id="menu-toggle"
+          class="md:hidden flex items-center text-green-600 focus:outline-none"
+          aria-label="Toggle menu"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-7 w-7"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
       </nav>
+
+      <!-- Menu (Mobile only) -->
+      <div
+        id="nav-links"
+        class="hidden md:hidden flex-col absolute top-[64px] left-0 w-full bg-white shadow-md border-t border-gray-100 font-semibold text-center"
+      >
+        <a
+          href="/"
+          class="block py-3 border-b border-gray-100 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          Beranda
+        </a>
+
+        <a
+          href="/#faq"
+          class="block py-3 border-b border-gray-100 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          FAQ
+        </a>
+
+        <a
+          href="/login"
+          class="block py-3 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          Login
+        </a>
+      </div>
     </header>
+    <!-- JS toggle -->
+    <script>
+      const btn = document.getElementById("menu-toggle");
+      const nav = document.getElementById("nav-links");
+      btn.addEventListener("click", () => {
+        nav.classList.toggle("hidden");
+      });
+    </script>
 
     <!-- Send Ticket -->
-    <section class="py-16 bg-white min-h-[calc(100vh-100px)]">
+    <section
+      class="py-16 bg-white min-h-[calc(100vh-100px)] flex items-center justify-center"
+    >
       <!-- Ticket -->
-      <div class="w-[50%] mx-auto border p-4">
-        <span class="text-[0.7rem] text-gray-500">
-          <a href="/ticket">Tiket</a>
-          <i class="fa-solid fa-arrow-right"></i> Pelayanan Akademik
+      <div
+        class="w-full sm:w-[80%] md:w-[65%] lg:w-[50%] mx-auto border border-gray-200 rounded-2xl shadow-sm p-4 sm:p-6 md:p-10 bg-white"
+      >
+        <span class="text-xs text-gray-500 block mb-4">
+          <a href="/ticket" class="hover:text-green-600 transition-colors"
+            >Tiket</a
+          >
+          <i class="fa-solid fa-arrow-right mx-1"></i> Pelayanan Akademik
         </span>
+
         <!-- Form -->
-        <form class="rounded-2xl p-8 w-full space-y-6" action="">
+        <form class="rounded-2xl w-full space-y-6" action="">
           <h1 class="text-2xl font-semibold text-gray-800 text-center">
             Kirimkan Permohonan Dukungan
           </h1>
@@ -78,7 +151,7 @@
             <span class="text-red-600">*</span>
           </p>
 
-          <!-- Username -->
+          <!-- Nama Lengkap -->
           <div>
             <label
               for="username"
@@ -87,8 +160,8 @@
             >
             <input
               type="text"
-              name="username"
               id="username"
+              name="username"
               placeholder="Masukkan nama Anda"
               class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-green-400 focus:outline-none"
             />
@@ -103,14 +176,14 @@
             >
             <input
               type="email"
-              name="email"
               id="email"
+              name="email"
               placeholder="nama@email.com"
               class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-green-400 focus:outline-none"
             />
           </div>
 
-          <!-- Unit dan Status -->
+          <!-- Unit & Status -->
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <div>
               <label
@@ -119,8 +192,8 @@
                 >Unit</label
               >
               <select
-                name="unit"
                 id="unit"
+                name="unit"
                 class="w-full px-4 py-2 border border-gray-300 rounded-md bg-white focus:ring-2 focus:ring-green-400 focus:outline-none"
               >
                 <option value="">Pilih unit</option>
@@ -137,8 +210,8 @@
                 >Status</label
               >
               <select
-                name="status"
                 id="status"
+                name="status"
                 class="w-full px-4 py-2 border border-gray-300 rounded-md bg-white focus:ring-2 focus:ring-green-400 focus:outline-none"
               >
                 <option value="">Pilih status</option>
@@ -158,8 +231,8 @@
             >
             <input
               type="text"
-              name="nimOrNpp"
               id="nimOrNpp"
+              name="nimOrNpp"
               placeholder="Masukkan NIM atau NPP"
               class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-green-400 focus:outline-none"
             />
@@ -173,8 +246,8 @@
               >Pesan / Keterangan</label
             >
             <textarea
-              name="pesan"
               id="pesan"
+              name="pesan"
               rows="4"
               placeholder="Tuliskan pesan atau keterangan di sini..."
               class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-green-400 focus:outline-none resize-none"
@@ -190,8 +263,8 @@
             >
             <input
               type="file"
-              name="file"
               id="file"
+              name="file"
               class="w-full text-sm text-gray-700 file:mr-4 file:py-2 file:px-4 file:rounded-md file:border-0 file:text-sm file:font-medium file:bg-green-50 file:text-green-700 hover:file:bg-green-100"
             />
           </div>
@@ -205,8 +278,8 @@
             >
             <input
               type="text"
-              name="chaptcha"
               id="chaptcha"
+              name="chaptcha"
               placeholder="Masukkan kode verifikasi"
               class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-green-400 focus:outline-none"
             />
@@ -239,52 +312,64 @@
 
     <!-- Modal After Sending -->
     <section
+      class="hidden fixed inset-0 flex justify-center items-center z-50 w-full h-full bg-[rgba(0,0,0,0.5)] transition-opacity duration-300"
       id="boxModalAfterSending"
-      class="hidden fixed top-0 left-0 flex justify-center items-center z-50 w-full h-screen bg-[rgba(0,0,0,0.5)] transition-opacity duration-300"
     >
       <div
+        class="h-[calc(100vh-10%)] bg-white text-center text-gray-600 w-[90%] sm:w-[70%] md:w-[50%] lg:w-[40%] max-h-[95vh] py-10 px-6 rounded-lg transform scale-95 opacity-0 transition-all duration-300 relative shadow-xl"
         id="modalAfterSending"
-        class="bg-white text-center text-gray-600 w-[40%] py-10 rounded-xl transform scale-95 opacity-0 transition-all duration-300 relative"
       >
+        <!-- Tombol Close -->
         <span
+          class="fixed -top-3 -right-3 cursor-pointer bg-red-500 h-[34px] w-[34px] flex justify-center items-center text-white rounded-full border-2 border-white hover:bg-red-600 transition"
           id="buttonCloseModalAfterSending"
-          class="absolute top-[-10px] right-[-10px] cursor-pointer bg-red-500 h-[30px] w-[30px] flex justify-center items-center text-white rounded-full border-2 hover:bg-red-600 transition"
         >
           <i class="fa-solid fa-xmark"></i>
         </span>
-        <!-- Form -->
-        <div class="w-full flex justify-center mb-2">
+
+        <div class="overflow-y-auto w-full h-[100%]">
+          <!-- Icon -->
+          <div class="w-full flex justify-center mb-4">
+            <span
+              class="flex w-[150px] h-[150px] sm:w-[180px] sm:h-[180px] rounded-full border-2 border-green-300 justify-center items-center text-[4rem] sm:text-[5rem] text-green-300"
+            >
+              <i class="fa-regular fa-envelope"></i>
+            </span>
+          </div>
+
+          <!-- Text -->
+          <h1 class="text-xl sm:text-2xl font-bold text-gray-800 mb-2">
+            Terimakasih Atas Laporannya
+          </h1>
+          <p class="text-gray-600 text-sm sm:text-base px-4 mb-2">
+            Untuk melihat progres laporan yang anda buat, anda dapat mengecek
+            secara berkala menggunakan ID Pelacakan milik Anda.
+          </p>
+
+          <p class="text-gray-800 text-sm sm:text-base mb-1 font-medium">
+            ID Pelacakan Anda
+          </p>
           <span
-            class="flex w-[200px] h-[200px] rounded-full border-2 border-green-300 justify-center items-center text-[6rem] text-green-300"
+            class="inline-block bg-blue-50 rounded-md text-center px-6 py-4 text-lg sm:text-xl font-bold text-blue-700 tracking-wider mb-3"
           >
-            <i class="fa-regular fa-envelope"></i>
+            64D-RTH-9PL2
           </span>
+
+          <p class="text-[0.7rem] sm:text-xs text-red-500 mb-4">
+            Nb: Mohon catat ID Pelacakan anda untuk pengecekan laporan secara
+            berkala
+          </p>
+
+          <!-- Button -->
+          <a href="/ticket/check-ticket">
+            <button
+              id="buttonCancelModalAfterSending"
+              class="w-[150px] sm:w-[180px] text-base sm:text-lg font-semibold bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-lg shadow transition-all duration-200"
+            >
+              Cek Laporan
+            </button>
+          </a>
         </div>
-        <h1 class="text-xl text-center font-bold">
-          Terimakasih Atas Laporannya.
-        </h1>
-        <span class="block px-4 py-2">
-          Untuk melihat progres laporan yang anda buat, anda dapat mengecek
-          secara berkala menggunakan ID Pelacakan Milik Anda.
-        </span>
-        <span class="block px-4 py-2">ID Pelacakan anda</span>
-        <span
-          class="inline-block bg-blue-50 rounded-md text-center p-6 text-xl font-bold"
-        >
-          64D-RTH-9PL2
-        </span>
-        <p class="text-[0.7rem] text-red-500">
-          Nb: Mohon catat ID Pelacakan anda untuk pengecekan laporan secara
-          berkala
-        </p>
-        <a href="/ticket/check-ticket">
-          <button
-            id="buttonCancelModalAfterSending"
-            class="w-[150px] text-lg font-semibold bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded shadow mt-2"
-          >
-            Cek Laporan
-          </button>
-        </a>
       </div>
     </section>
 
